# tsu.intime-gcalendar

./: .gitignore  README.md  data_classes.py  gcalendar_client.py  in_time_client.py  logic.py  main.py  pyproject.toml  requirements.txt  tsu_sync
intime_gcalendar/: config.py  domain.py  gcalendar_client.py  in_time_client.py  logic.py  main.py  models.py  utils.py
src/: data_classes.py  gcalendar_client.py  in_time_client.py  logic.py
